outline for code

--- a/ifelse2.0/index.html
+++ b/ifelse2.0/index.html
@@ -39,7 +39,7 @@
           2)  Result - When this situation happens, the program will do this.<br>
           3) <code>else</code> - When the situation doesn't happen, the program will do this.
           <br><br>
-          Let's make sure Bit by Bot is dressed appropriately for the weather!
+          Let's make sure Bit by Bot is dressed appropriately for the weather! Select from the dropdowns below or edit the code!
           <br><br>
           Remember: <br/>
           <code>===</code> means AND (both conditions have to be met to get this result) <br/>
@@ -49,14 +49,82 @@
       </div>
     </div>
     <div class="flex-container" style="margin: 1em 0;">
-
-      <div class="showcase-section flex-item section">
+      <div id="options-section" class="flex-col section" style="margin-right: 0.5em;">
+        <p>
+          Bit by Bot is getting dressed for the day, but is a bit worried about the weather. Let's help him prepare!
+          <br><br>
+          First, select the conditional (If the weather is ...).
+          <br>
+          Then, select the result of the conditional (... then Bit by Bot will wear...).
+          <br>
+          Lastly, select the result of the else (... or else, Bit by Bot will wear...).
+          <br>
+        </p>
+      </div>
+      <div class="editor-section flex-item section">
 
       </div>
-    </div>
-    <div class="editor-section flex-item section">
 
     </div>
+    <div class="showcase-section flex-item section" style="padding: 1em;">
+      <div id="dancer">
+        <svg class="robot" xmlns="http://www.w3.org/2000/svg" viewBox="-100 -10 333 466">
+          <defs>
+            <style>
+              .cls-1,
+              .cls-2 {
+                fill: #c9fdfb;
+              }
+
+              .cls-1,
+              .cls-2,
+              .cls-3 {
+                stroke: #6bdcd8;
+                stroke-miterlimit: 10;
+              }
+
+              .cls-1,
+              .cls-3 {
+                stroke-width: 2px;
+              }
+
+              .cls-2 {
+                stroke-width: 4px;
+              }
+
+              .cls-3 {
+                fill: #eef3f3;
+              }
+
+              .cls-4 {
+                fill: #fda454;
+              }
+            </style>
+          </defs>
+          <g class="feet">
+            <ellipse class="cls-1 lfoot" cx="88.61" cy="341.46" rx="13" ry="22" />
+            <ellipse class="cls-1 rfoot" cx="148.5" cy="339.54" rx="13" ry="22" />
+          </g>
+          <g class="rarm">
+            <ellipse class="cls-1 rarm" cx="185" cy="251.04" rx="34.5" ry="20.5" />
+          </g>
+          <g class="larm">
+            <ellipse class="cls-1 larm" cx="53" cy="255.04" rx="34.5" ry="20.5" />
+          </g>
+          <path class="cls-2 body" d="M175.5,277a59.5,59.5,0,0,1-119,0c0-32.86,29.14-67.5,62-67.5S175.5,244.18,175.5,277Z" />
+          <g class="head">
+            <circle class="cls-2" cx="115.5" cy="116.54" r="112" />
+            <path class="cls-3"
+              d="M179.5,154.54c-11,7-34.18,8.79-60.48,10-21,1-39.52-3-59.52-10v-86a452.63,452.63,0,0,0,60.48,4,454.48,454.48,0,0,0,59.52-4Z" />
+            <ellipse class="cls-4" cx="92" cy="104.04" rx="4.5" ry="12.5" />
+            <ellipse class="cls-4" cx="148" cy="104.04" rx="4.5" ry="12.5" />
+            <ellipse class="cls-4" cx="120" cy="135.04" rx="2.5" ry="9.5"
+              transform="translate(-37.64 223.27) rotate(-77.61)" />
+          </g>
+        </svg>
+      </div>
+    </div>
+
   </div>
 
   <script src="../assets/prism.js"></script>
