robot svg edited

--- a/ifelse2.0/index.html
+++ b/ifelse2.0/index.html
@@ -61,14 +61,21 @@
           <br>
         </p>
       </div>
-      <div class="editor-section flex-item section">
-
+      <div class="editor-section flex-item section" style="padding: 1em;">
+        <code>
+          if (weather === 'sunny') { <br>
+            bitByBotWears = 'sunglasses'; <br>
+          } <br>
+          else { <br>
+            bitByBotWears = 'jacket'; <br>
+          } <br>
+        </code>
       </div>
 
     </div>
     <div class="showcase-section flex-item section" style="padding: 1em;">
       <div id="dancer">
-        <svg class="robot" xmlns="http://www.w3.org/2000/svg" viewBox="-100 -10 333 466">
+        <svg class="robot" xmlns="http://www.w3.org/2000/svg" height="400" width="500" viewBox="-100 -50 333 466">
           <defs>
             <style>
               .cls-1,
@@ -121,6 +128,10 @@
             <ellipse class="cls-4" cx="120" cy="135.04" rx="2.5" ry="9.5"
               transform="translate(-37.64 223.27) rotate(-77.61)" />
           </g>
+          <!-- smile : <polyline class="cls-4" points="100,135 120,145 140,135" style="stroke:#fda454;stroke-width:2" /> -->
+          <!-- hat: <ellipse cx="100" cy="30" rx="150" ry="30" style="fill:purple" />
+          <circle cx="105" cy="10" r="50" fill="purple" /> -->
+
         </svg>
       </div>
     </div>
