--- a/ifelse2.0/index.html
+++ b/ifelse2.0/index.html
@@ -129,8 +129,21 @@
               transform="translate(-37.64 223.27) rotate(-77.61)" />
           </g>
           <!-- smile : <polyline class="cls-4" points="100,135 120,145 140,135" style="stroke:#fda454;stroke-width:2" /> -->
+
           <!-- hat: <ellipse cx="100" cy="30" rx="150" ry="30" style="fill:purple" />
           <circle cx="105" cy="10" r="50" fill="purple" /> -->
+
+          <!-- sunglasses: <circle cx="95" cy="110" r="15" fill="black" />
+            <circle cx="145" cy="110" r="15" fill="black" />
+            <line x1="95" y1="110" x2="145" y2="110" style="stroke:#000000;stroke-width:2" /> -->
+
+          <!-- jacket: <polyline points="30,230 30,280 55,280 50,350 120,350 120,220" style="fill:#808000;stroke:#006400;stroke-width:2" />
+          <polyline points="210,230 210,280 175,280 180,350 120,350 120,220" style="fill:#808000;stroke:#006400;stroke-width:2" />
+          <circle cx="129" cy="320" r="5" style="fill:#556B2F;stroke:#006400;stroke-width:2" />
+          <circle cx="129" cy="290" r="5" style="fill:#556B2F;stroke:#006400;stroke-width:2" />
+          <circle cx="129" cy="260" r="5" style="fill:#556B2F;stroke:#006400;stroke-width:2" /> -->
+
+          <!-- umbrella: <polyline points="200,250 200,360 215,290 185,290 200,360" style="fill:#20B2AA;stroke:#006400;stroke-width:2" /> -->
 
         </svg>
       </div>
