--- a/ifelse2.0/index.html
+++ b/ifelse2.0/index.html
@@ -86,8 +86,11 @@
     </div>
     <div class="showcase-section flex-item section" style="padding: 1em;">
       <div class="flex-item section">
-        <p>Today the weather is... </p>
-        <p id="randomWeather"></p>
+        <p>Today the weather is...
+          <span id="randomWeather"></span>
+          !
+        </p>
+
       </div>
       <div id="dancer">
         <svg class="robot" xmlns="http://www.w3.org/2000/svg" height="400" width="500" viewBox="-100 -50 333 466">
